--- a/src/rodape/index.scss
+++ b/src/rodape/index.scss
@@ -1,20 +1,52 @@
 .rodapee {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-image: url(../../public/assets/image/fundo-cabecalho.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 9vh;
-   padding: 10px 50px 10px 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url(../../public/assets/image/fundo-cabecalho.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 9vh;
+  padding: 10px 50px 10px 50px;
 
- div > img {
+  div>img {
     margin: 5px;
- }
+  }
+
+  h3 {
+    color: white;
+  }
+}
+
+@media (max-width: 450px) {
+  .rodapee {
+
+
+    max-width: 100%;
+
+    margin-top: -50px;
+    margin-left: -0px;
+    gap: 30px;
 
     h3 {
-        color: white;
+
+
+      margin-left: -45px;
+      width: 250px !important;
     }
   }
+
+  .redes {
+    display: flex;
+
+    width: 350px;
+
+    justify-content: end;
+    margin-right: -50px;
+
+    img {
+      width: 34px;
+    }
+  }
+}
