--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -1,41 +1,41 @@
 .mae-adm {
-display: flex;
-flex-direction: column;
-background-color: #D9D9D9;
-.container-adm{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-width: 100%;
-height: 80vh;
 
-.sub-3{
-    display: flex;
-    flex-direction: column;
-
-    .sub-azul {
+    .container {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: #227AFF;
-        margin-bottom: 40px;
-        width: 500px;
-        height: 70px;
-        border-radius: 10px;
+        flex-direction: row;
+
+    
+        .espaco-1 {
+            display: flex;
+            flex-direction:column;
         
-        .H1{
-            font-size: 25px;
-            text-decoration: none;
-            color: white;
-            font-family: Arial, Helvetica, sans-serif;
+            width: 400px ;
+            height: 100vh;
+            background-color: #1A417C;
+
+            .agenda {
+                width: 200px;
+            }
+
+            .logoo {
+                display: flex;
+                width: 400px;
+                justify-content: center;
+                align-items: center;
+                margin-top: 50px;
+               .logo{ 
+                width: 240px;
+               }
+            }
         }
+
+
+        .espaco-2 {
+          display: flex;
+          flex-direction: column;
+        }
+
     }
-}
-
-}
-
 
 
 }
