--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -8,14 +8,29 @@
         .espaco-1 {
             display: flex;
             flex-direction:column;
-        
             width: 400px ;
             height: 100vh;
             background-color: #1A417C;
 
+         .agendaa{
+         display: flex; 
+         align-items: center;
+         flex-direction: row;
+         text-decoration: none;
+         margin-bottom: 90px;
+         transition: 0.8s;
+         cursor: pointer;
+         
             .agenda {
-                width: 200px;
+              margin: 15px;
+              width: 50px;
             }
+
+            h3{
+              color: white;
+              font-size: 30px;
+            }
+          }
 
             .logoo {
                 display: flex;
@@ -23,16 +38,82 @@
                 justify-content: center;
                 align-items: center;
                 margin-top: 50px;
+                margin-bottom: 170px;
                .logo{ 
                 width: 240px;
                }
             }
+
+.agendaa:hover{
+    width: 100%;
+    background-color: rgb(56, 69, 255);
+}
+
         }
 
 
         .espaco-2 {
           display: flex;
           flex-direction: column;
+
+          .logo-grande {
+            width: 800px;
+            height: 800px;
+          }
+
+          .d9 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #d9d9d9;
+            width: 100%;
+            height: 100%;
+          }
+
+          h2{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: white;
+          }
+
+          .usuario {
+            width: 80px;
+            height: 80px;
+          }
+
+          nav{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 10px 60px 10px 50px;
+            align-items: center;
+            width: 106.9vh;
+            height: 15vh;
+            background-color: #164FA6;
+
+        .usuario-p{
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            flex-direction: row;
+
+            p{
+                color: white;
+                padding: 15px;
+                border-radius: 5px;
+                border: 1px solid white;
+                transition: 0.5s;
+                cursor: pointer;
+            }
+
+           p:hover {
+            border: 1px solid rgb(168, 168, 168);
+            color: rgb(168, 168, 168);
+           }
+
+        }
+
+          }
+
         }
 
     }
