tela-cadastro-consulta-jzdq

--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -1,176 +1,189 @@
-.maeeee{
+.mae-admm {
+
+    .container {
+        display: flex;
+        flex-direction: row;
+
     
+        .espaco-1 {
+            display: flex;
+            flex-direction:column;
+            width: 400px ;
+            height: 100vh;
+            background-color: #1A417C;
+
+         .agendaa{
+         display: flex; 
+         align-items: center;
+         flex-direction: row;
+         text-decoration: none;
+         margin-bottom: 90px;
+         transition: 0.8s;
+         cursor: pointer;
+         
+            .agenda {
+              margin: 15px;
+              width: 50px;
+            }
+
+            h3{
+              color: white;
+              font-size: 30px;
+            }
+          }
+
+            .logoo {
+                display: flex;
+                width: 400px;
+                justify-content: center;
+                align-items: center;
+                margin-top: 50px;
+                margin-bottom: 170px;
+               .logo{ 
+                width: 240px;
+               }
+            }
+
+.agendaa:hover{
     width: 100%;
-    display: flex;
-    flex-direction: column;
-   
-    .cabecalho{
-        display: flex;
-        height: 25vh;
-        width: 100%;
-        rotate: 0.2deg;
-       
-    }
+    background-color: rgb(56, 69, 255);
+}
 
-    .fundo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-     background-image: url(../../../public/assets/image/fundo-onda.png);
-     background-position: 50% 8%;
-     background-repeat: no-repeat;
-     background-size: cover;
-
- 
-    }
-
-    .logo{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: 90%;
-        margin-left: 45px;
-    }
-
-    .lg{
-        height: 110px;
-        width: 110px;
-    }
-
-    .voltar{
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .voltar:hover{
-        text-decoration: underline;
-    }
-
-    .corpo{
-        height: 50vh;
-        width: 100% ;
-        display: flex;
-        flex-direction: row;
-        margin-right: 70px;
-    }
-
-    .varios{
-        justify-content: center;
-        align-items: center;
-        height: 42vh;
-        width: 50vw;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-
-        input {
-            padding: 35px;
-            width: 500px !important;
-
-            font-size: 25px;
-        }
-    }
-
-    .varios input{
-        width: 250px;
-        height: 25px;
-        padding-left: 20px;
-        outline: none;
-    }
-
-    .varios input:hover{
-        box-shadow: 0px 0px 10px 0px #000;
-        transition: 0.2s;
-        border: none;
-    }
-
-    h1{
-        margin-top: 86px;
-        margin-bottom: 100px;
-        font-size: 60px;
-    }
-
-    .imagem{
-        height: 42vh;
-        width: 40vw;
-        background-color: #ffffff;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        padding: 0px;
-        display: flex;
-       box-shadow: 0px 0px 30px 1px rgb(205, 255, 253);
-
-
-        .nuvem{
-            height: 220px;
-            width: 290px;
-            margin-top: -10px;  
-            margin-bottom: 50PX;            
         }
 
-        .linha{
-            width: 40vw;
-            height: 2px;
-            background-color: #000000;
-            margin-top: -40PX;
-            margin-bottom: 50PX;
+
+        .espaco-2 {
+          display: flex;
+          flex-direction: column;
+
+          .logo-grande {
+            width: 800px;
+            height: 800px;
+            opacity:0.2;
+          }
+
+          .d9 {
+            display: flex;
+            flex-direction: column;
+            padding: 150px 10px 10px 180px;
+            width: 100%;
+            height: 100%;
+            
+            
+
+            .d8{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                width: 55vw;
+                height: 45vh;
+                background-color: #D9D9D9;
+                box-shadow:1px 1px 10px 1px #818181;
+                border-radius: 20px;
+                .input-4 {
+                    display: flex;
+                    flex-direction: column;
+
+
+                    input{
+                        display: flex;
+                        align-items:center;
+                        font-size: 18px;
+                        width: 340px;
+                        padding: 15px;
+                        border-radius: 10px;
+                        margin-bottom: 30px;
+                        margin-right: 100px;
+                        outline: none;
+                        border: none;
+                        background-color: #939393;
+                    }
+
+                    ::-webkit-input-placeholder {
+                        font-size: 18px;
+                    }
+                }
+
+               .cinzaa {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                border-radius: 15px;
+                margin-left: 10px;
+                margin-top: 60px;
+                .cinza{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 20vw;
+                    height: 22vh;
+                    background-color: #939393; 
+                    margin-bottom: 35px;
+                }
+
+                .salvar {
+                    border: none;
+                    font-size: 25px;
+                    border-radius: 5px;
+                    background-color: #164FA6;
+                    color: white;
+                    width: 260px;
+                    padding: 15px;
+                }
+               }
+
+            }
+          }
+
+          h2{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: white;
+          }
+
+          .usuario {
+            width: 80px;
+            height: 80px;
+          }
+
+          nav{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 10px 60px 10px 50px;
+            align-items: center;
+            width: 106.9vh;
+            height: 15vh;
+            background-color: #164FA6;
+
+        .usuario-p{
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            flex-direction: row;
+
+            p{
+                color: white;
+                padding: 15px;
+                border-radius: 5px;
+                border: 1px solid white;
+                transition: 0.5s;
+                cursor: pointer;
+            }
+
+           p:hover {
+            border: 1px solid rgb(168, 168, 168);
+            color: rgb(168, 168, 168);
+           }
+
         }
 
-        .letras{
-            font-size: 30PX;
-            color: #000;
-            text-align: center;
-            margin-bottom: 30px;
+          }
+
         }
 
-        .baixar{
-            height: 70px;
-            width: 120px;
-        }
     }
 
-    .salvar{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 35px;
-        font-size: 33px;
-        height: 40px;
-        background-color: #fff;
-        width: 400px;
-        color: #309CFF;
-        border-radius: 10px;
-        border: none;
-        margin-bottom: 100px;
 
-    }
-
-    .baix{
-        background: none;
-        border: none;
-    }
-
-    .salvar:hover{
-        box-shadow: 0px 0px 10px 0px #000;
-        transition: 0.2s;
-    }
-
-    .cc{
-        margin-bottom: 50px;
-    }
-
-    .rodape{
-        height: 6vh;
-        width: 100%;
-        background-color: #0060B9;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 }
