--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -59,6 +59,7 @@
           .logo-grande {
             width: 800px;
             height: 800px;
+            opacity:0.2;
           }
 
           .d9 {
