--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -151,7 +151,7 @@
             width: 290px;
             margin-top: -10px;  
             margin-bottom: 50PX;            
->>>>>>> cad713074e7ed44e7261ac7ab363741d98b3447a
+
         }
 
 
@@ -288,5 +288,7 @@
 
     }
 
-
+        }
+    }
 }
+    
