--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -56,7 +56,7 @@
           display: flex;
           flex-direction: column;
 
-<<<<<<< HEAD
+
           .logo-grande {
             width: 800px;
             height: 800px;
@@ -74,7 +74,7 @@
 
           h2{
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-=======
+
     .sub-azul {
         display: flex;
         flex-direction: column;
@@ -89,7 +89,6 @@
         .H1{
             font-size: 25px;
             text-decoration: none;
->>>>>>> cad713074e7ed44e7261ac7ab363741d98b3447a
             color: white;
           }
 
@@ -137,4 +136,6 @@
     }
 
 
+  }
+}
 }
