jsq-bug-arrumado

--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -1,4 +1,4 @@
-.mae-adm {
+.mae-admm {
 
     .container {
         display: flex;
@@ -86,7 +86,7 @@
         height: 70px;
         border-radius: 10px;
         
-        .H1{
+        .h1{
             font-size: 25px;
             text-decoration: none;
             color: white;
