--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -11,7 +11,7 @@ flex-direction: row;
     flex-direction:column;
 
     width: 400px ;
-    height: 100vh;
+    height: 130vh;
     background-color: #1A417C;
 
  .agendaa{
@@ -66,12 +66,18 @@ background-color: rgb(56, 69, 255);
 
   .d9 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #d9d9d9;
     width: 100%;
     height: 100%;
 
+    .h1-button {
+     display: flex;
+     flex-direction: column;
+     margin-right: 860px;
+    }
     
     .d8{
         display: flex;
@@ -83,6 +89,7 @@ background-color: rgb(56, 69, 255);
         background-color: #D9D9D9;
         box-shadow:1px 1px 10px 1px #818181;
         border-radius: 20px;
+        margin-bottom: 100px;
         .input-4 {
             display: flex;
             flex-direction: column;
