--- a/src/meuspedidos/index.scss
+++ b/src/meuspedidos/index.scss
@@ -68,3 +68,44 @@ h3 {
 }
 
 }
+
+
+@media (max-width :850px){
+
+  h1{
+    margin-right: 1200px;
+  }
+
+
+  .agrupa-card{
+    margin-right: 1220px;
+  flex-direction: column !important;
+  margin-top: -130px;
+  gap: 40px;
+  }
+
+
+  .containeer{
+    height: 20vh !important;
+    width: 30vw;
+  }
+
+  p{
+    font-size: 25px ;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+  }
+
+
+  .sub2{
+    margin-top: 8px;
+  }
+
+  h3{
+    margin-top: 20px;
+  }
+
+  button{
+    margin-top: 15px;
+  }
+}
