--- a/src/login/index.scss
+++ b/src/login/index.scss
@@ -151,150 +151,30 @@
 
 
 
-}
 
 
+    @media (max-width:450px){
 
-@media (max-width: 400px) {
+        input{
+            background-color: aliceblue !important;
+
+        }
 
 
+        .input-login{
+            background-color: rgba(6, 71, 128, 0.637);
+        }
 
-    .mae-login {
 
+        button{
+            margin-right: 20px !important;
+        }
 
-
-        max-width: 100%;
-
+        .agrupa-p{
+            margin-left: 20px !important;
+        }
 
         
     }
-
-
-
-    .img-logo {
-
-
-        
-        height: 80px;
-        width: 85px !important;
-        margin-left: -35px;
-
-
-
-    }
-
-
-
-    .adm-login {
-
-
-
-        height: 120px;
-        width: 125px;
-        margin-left: -2px;
-        margin-top: -25px;
-
-
-
-
-
-
-        img {
-
-
-
-            height: 35px;
-
-
-
-        }
-
-
-
-    }
-
-
-
-    .usuario {
-
-
-
-        height: 100px;
-        width: 115px !important;
-
-
-
-    }
-
-
-
-    .agrupa-tudo {
-
-
-
-        height: 45px !important;
-        margin: 5px !important;
-
-
-
-        h2 {
-
-
-
-            font-size: 45px !important;
-
-
-
-        }
-
-
-
-    }
-
-
-
-    .input-login {
-
-
-
-        height: 45px !important;
-        margin: 5px !important;
-
-
-
-        input {
-
-
-
-            height: 45px !important;
-            margin: 5px !important;
-
-
-
-        }
-
-
-
-    }
-
-
-
-    .agrupa-p {
-
-
-
-        button {
-
-
-
-            height: 45px;
-            width: 115px !important;
-
-
-
-        }
-
-
-
-    }
 }
+
