--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -76,7 +76,31 @@ background-color: rgb(56, 69, 255);
     .h1-button {
      display: flex;
      flex-direction: column;
-     margin-right: 860px;
+     margin-right: 820px;
+     margin-left: 100px;
+
+     h1{
+      font-size: 56px;
+     }
+
+     input {
+      outline: none;
+      border-radius: 5px;
+      font-size: 20px;
+      color: white;
+      border: none;
+      background-color:#595959 ;
+      width: 280px;
+       padding: 15px;
+     }
+
+
+     .lupa {
+      position: relative;
+      right: 40px;
+      top: 10px;
+      width: 30px;
+     }
     }
     
     .d8{
@@ -98,6 +122,7 @@ background-color: rgb(56, 69, 255);
             input{
                 display: flex;
                 align-items:center;
+                color: white;
                 font-size: 18px;
                 width: 340px;
                 padding: 15px;
@@ -110,6 +135,7 @@ background-color: rgb(56, 69, 255);
             }
 
             ::-webkit-input-placeholder {
+                color: white;
                 font-size: 18px;
             }
         }
