--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -62,7 +62,7 @@
         }
 
         .abc{
-            height: 60vh;
+            height: 45vh;
             width: 350px;
             background-color: #fff;
             border-radius: 15px;
@@ -80,13 +80,13 @@
         .abc:hover{
                 box-shadow: 0px 0px 25px 0.1px #a4fff7;
                 transition: 0.2s;
-                height: 61vh;
+                height: 47vh;
                 width: 352px;
             }
 
         .preco{
             margin-top: -8px;
-
+            color: #309CFF;
         }
 
         .caminhao{
@@ -133,6 +133,7 @@
             margin-top: 25px;
             margin-bottom: 15px;
             text-align: center;
+            font-size: 25px;
         }
 
         .line{
