--- a/src/homeadm/index.scss
+++ b/src/homeadm/index.scss
@@ -12,6 +12,10 @@
             height: 100vh;
             background-color: #1A417C;
 
+            #sairconta {
+              margin-top: 80px;
+            }
+
          .agendaa{
          display: flex; 
          align-items: center;
@@ -26,12 +30,13 @@
               width: 50px;
             }
 
+
             h3{
               color: white;
               font-size: 30px;
             }
           }
-
+         
             .logoo {
                 display: flex;
                 width: 400px;
