--- a/src/home-login-cadastro/index.scss
+++ b/src/home-login-cadastro/index.scss
@@ -39,7 +39,7 @@
             display: flex;
             flex-direction: row;
             width: 100%;
-            height: 30vh;
+            height: 40vh;
             background-color: #004586;
       
             justify-content: center;
@@ -61,7 +61,9 @@
                 flex-direction: row;
                 width: 210px;
 
-
+            .img-32 {
+                width: 24px;
+            }
 
 
                 .grupo-image>img {
@@ -109,10 +111,12 @@
             background-size: cover;
             background-position: 40% 50%;
             width: 100%;
-            height: 80vh;
+            height: 85vh;
             display: flex;
+            justify-content: center;
             flex-direction: column;
             align-items: center;
+            margin-top: -30px;
 
             h1 {
                 margin-bottom: 100px;
@@ -334,12 +338,23 @@
 }
 
 @media (max-width: 850px) {
-    .mae {
+    .maee {
         max-width: 100%;
-    }
+  
+        .rodape {
+            height: 85vh !important;
+        }
+
+     .infos {
+        width: 230px !important;
+
+        p{
+            font-size: 10px;
+        }
+     }   
 
     .cruz {
-        margin-left: -95px;
+        margin-top: -10px;
     }
 
     .cardd {
@@ -356,7 +371,7 @@
     }
     
     .servic{
-        width: 850px;
+        width: 450px !important;
     }
 
     .agrupa-info {
@@ -383,14 +398,60 @@
             cursor: pointer;
         }
     }
+    }
 
 
 
 
     // RESPONSE J
 
-  
+
+
+    @media (max-width: 1105px) {
+
+.infos{
+    h2 {
+        font-size: 16px !important;
+    }
+    width: 160px !important;
+}
+
+    }
+
+
+
+   
+
     
+
+
+    @media (max-width: 1405px) {
+       
+        .subcontainer2 {
+          font-size: 34px !important;  
+          min-width: 100px !important;
+        .servic {
+           width: 400px !important;
+           height:450px !important ;
+        }
+
+        .bugado {
+            margin-top: -100px;
+        }
+    }
+
+        }
+  
+        @media (max-width: 1600px) {
+       
+            .subcontainer2 {
+              font-size: 14px !important;  
+            .servic {
+                width:800px !important;
+            }
+        }
+    
+            }
     
     
 
