--- a/src/login/index.scss
+++ b/src/login/index.scss
@@ -77,13 +77,18 @@
                 width: 480px !important;
 
 
-
-                p {
+                .agrupa-p {
+                  display: flex;
+                  flex-direction: column;
+                a {
+                    
+                    cursor: pointer;
+                    text-decoration: none;
                     color: white;
                     margin-bottom: 9px;
                 }
 
-
+            }
 
                 button {
                     width: 210px !important;
