--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -101,8 +101,10 @@ background-color: rgb(56, 69, 255);
 
      .lupa {
       position: relative;
+      top: 10px;
       right: 40px;
       width: 30px;
+      height: 30px;
      }
 
     }
@@ -110,26 +112,42 @@ background-color: rgb(56, 69, 255);
     
     .d8{
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        width: 55vw;
-        height: 45vh;
+        flex-direction: column;
+
+        padding: 90px 10px 10px 105px;
+        width: 45vw;
+        height: 60vh;
         background-color: #D9D9D9;
         box-shadow:1px 1px 10px 1px #818181;
         border-radius: 20px;
         margin-bottom: 100px;
+
+
+
+
+
         .input-4 {
             display: flex;
             flex-direction: column;
+         
 
+            .salvar {
+              border: none;
+              padding: 10px;
+              background-color: #1A417C;
+              width: 300px;
+              color: white;
+              margin-left: 180px;
+              border-radius: 5px;
+              font-size: 22px;
+            }
 
             input{
                 display: flex;
                 align-items:center;
                 color: white;
                 font-size: 18px;
-                width: 340px;
+                width: 480px;
                 padding: 15px;
                 border-radius: 10px;
                 margin-bottom: 30px;
@@ -145,44 +163,7 @@ background-color: rgb(56, 69, 255);
             }
         }
 
-       .cinzaa {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        border-radius: 15px;
-        margin-left: 10px;
-        margin-top: 60px;
-        .cinza{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 20vw;
-            height: 22vh;
-            background-color: #939393; 
-            margin-bottom: 35px;
-
-            #imagemCapa{
-              visibility: hidden;
-              position: absolute;
-            }
-
-            .imagem {
-              width: 400px;
-              height: 200px;
-            }
-        }
-
-        .salvar {
-            border: none;
-            font-size: 25px;
-            border-radius: 5px;
-            background-color: #164FA6;
-            color: white;
-            width: 260px;
-            padding: 15px;
-        }
-       }
+      
 
     }
   }
