--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -1,6 +1,12 @@
 .mae {
 
 
+
+    .ahome{
+        color: #000000;
+        text-decoration: none;
+    }
+
     .container {
 
         display: flex;
