--- a/src/filtro/index.scss
+++ b/src/filtro/index.scss
@@ -157,8 +157,9 @@
         }
 
         .fim{
-            margin-top: 25px;
-        }
+            margin-top: 0px;
+            background-color: #000000;
+        }       
     }
 
 }
