--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -63,7 +63,7 @@
         }
 
         .abc{
-            height: 60vh;
+            height: 45vh;
             width: 350px;
             background-color: #fff;
             border-radius: 15px;
@@ -71,7 +71,7 @@
             justify-content: start;
             flex-direction: column;
             align-items: center;
-           
+            gap: 5px;
         }
         
             h3{
@@ -81,7 +81,7 @@
         .abc:hover{
                 box-shadow: 0px 0px 25px 0.1px #a4fff7;
                 transition: 0.2s;
-                height: 61vh;
+                height: 46vh;
                 width: 352px;
             }
 
@@ -164,13 +164,29 @@
     }
 }
 
-
-
+.botao{
+    height: 15px;
+    width: 190px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
 @media (max-width:850px) {
 
     .mae{
+        display: flex;
+        flex-direction: column;
     .tudo{
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        .coluna{
+            display: flex;
+            flex-direction: column;
+        }
+
     .prd{
         display: none;
     }
@@ -207,7 +223,7 @@
     }
 
     .fundo-virado{
-        background-image: url(../../public/assets/image/fundo-corpo.png);
+        background-image: none;
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -390,3 +406,4 @@
     
 }
 }
+
