--- a/src/modopagamento/index.scss
+++ b/src/modopagamento/index.scss
@@ -2,6 +2,12 @@
 display: flex;
 flex-direction: column ;
 
+
+.amodopagamento{
+    color: #000000;
+    text-decoration: none;
+}
+
 .agrupapagamento {
      display: flex;
      flex-direction: column;
@@ -68,4 +74,107 @@ flex-direction: column ;
 
 
 
+}
+
+
+
+    
+
+
+@media (max-width: 850px) {
+
+
+
+
+  .agrupapagamento{
+
+    margin-top: 30px !important;
+    margin-bottom: 99px !important;
+
+
+
+    .cadeado{
+        margin-bottom: 35px !important;
+        margin-right: 45px !important;
+    }
+
+
+    h1{
+        color: black !important;
+        justify-content: center !important;
+        align-items: center !important;
+        margin-right: 30px;
+        margin-bottom: 53px !important;
+    }
+
+    h2{
+    }
+  }
+
+
+  .agrupaform{
+     gap: 40px;
+  }
+
+
+
+  .containerpagamento{
+
+
+   .pix{
+    position: relative;
+    left: 80px;
+    top: -23px;
+   }
+ 
+    h3{
+        margin-top: 20px !important;
+    }
+    .paypal{
+      position: relative;
+      left: 100px;
+      top: -20px;
+    }
+
+    .subcontainerpagamento{
+        margin-top: -20px !important;
+    }
+  }
+}
+
+
+@media (max-width: 450px) {
+
+
+
+    .agrupapagamento{
+
+
+        .cadeado{
+            margin-left: 75px;
+        }
+
+
+        h1{
+            margin-left: 80px;
+            width: 100vw;
+        }
+
+        h2{
+            height: 20px;
+            width: 98vw;
+        }
+    }
+
+    .agrupaform{
+
+
+
+
+        .containerpagamento{
+
+            width: 410px !important;
+            margin-left: 20px;
+        }
+    }
 }
