--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -73,6 +73,86 @@ background-color: rgb(56, 69, 255);
     width: 100%;
     height: 100%;
 
+
+
+    table {
+      width: 67%;
+      border-collapse: separate;
+      border-spacing: 0px 10px;
+      font-size: 18px ;
+      padding: 30px;
+
+}
+
+  .tabelas{
+    height: 750px;
+    overflow: auto;
+    width: 91%;
+
+    img{
+      width: 35px;
+      height: 50px;
+      cursor: pointer;
+      margin-left: 20px;
+    }
+  }
+
+  .tabelas::-webkit-scrollbar{
+    width: 10px;
+ 
+  }
+
+  .tabelas::-webkit-scrollbar-track{
+    background-color: transparent;
+    height: 10px;
+  }
+
+  .tabelas::-webkit-scrollbar-thumb{
+    background-color: rgba(143, 143, 143, 0.363);
+    border-radius: 20px;
+  }
+
+  thead{
+    color: #1A417C;
+    font-family: 'inter';
+    font-size: 25px;
+  }
+
+  tbody{  
+    background-color: #fff;
+    width: 100%;
+
+    .lado {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+
+  td{
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    padding: 6px 81px;
+    color: #000000;
+    font-family: 'inter';
+    font-size: 20px;
+  }
+
+  tbody tr td:first-child {
+    border-left: 1px solid #000000;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+  tbody tr td:last-child {
+    border-right: 1px solid #000000;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+}
+
+
+
+
     .h1-button {
      display: flex;
      flex-direction: column;
@@ -216,6 +296,6 @@ background-color: rgb(56, 69, 255);
 
 }
 
-}
+
 
 
