--- a/src/login/index.scss
+++ b/src/login/index.scss
@@ -127,8 +127,8 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-
-
+                text-decoration: none;
+ 
 
                 h3 {
                     color: white;
