--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -206,24 +206,26 @@
 
 
 
-
-
-
+    
     .cima{
         flex-direction: column;
         gap: 50px;
+        margin-top: 1600px;
+        height: 1450px;
     }
 
     .baixo{
         flex-direction: column;
+        margin-top: 80px;
     }
 
     .abc{
+        height: 450px;
         box-shadow: 1px 1px 10px 1px;
     }
 
     .fundo-virado{
-        background-image: none;
+        background-image: url(../../public/assets/image/fundo-ondaaa.png);
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -231,6 +233,7 @@
         justify-content: center;
         gap: 50px;
         rotate: 180deg;
+        margin-top: -50px;
         .abc{
             rotate: 180deg;
             height: 370px;
