--- a/src/rodape/index.scss
+++ b/src/rodape/index.scss
@@ -58,3 +58,12 @@
       display: none;
     }
   }
+
+
+
+  @media (max-width:1366px) {
+
+    .rodapee{
+      margin-top: 20px !important;
+    }
+  }
