--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -27,7 +27,7 @@
             }
         }
 
-        .asvezes{
+        .asvezes {
             display: none;
         }
 
@@ -43,7 +43,7 @@
             width: 100%;
             height: 30vh;
             background-color: #004586;
-      
+
             justify-content: center;
 
             .agrupa-info {
@@ -123,7 +123,7 @@
             }
 
             .servic {
-                width: 990px;
+                width: 90px !important;
                 border-radius: 15px;
             }
         }
@@ -394,64 +394,64 @@
 
 
 
-    // RESPONSE J
+// RESPONSE J
 
-  
-    
-    
-    
 
-    @media (max-width: 768px) {
-        .mae {
-            max-width: 100%;
-        }
-    
-        .cruz {
-            margin-left: -95px;
-        }
-    
-        .cardd {
-            width: 280px;
-        }
-    
-    
-        .rodape {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            height: 20vh;
-            background-color: #004586;
-        }
-        
-        .bugado{
+
+
+
+
+@media (max-width: 768px) {
+    .mae {
+        max-width: 100%;
+    }
+
+    .cruz {
+        margin-left: -95px;
+    }
+
+    .cardd {
+        width: 280px;
+    }
+
+
+    .rodape {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 20vh;
+        background-color: #004586;
+    }
+
+    .bugado {
+        width: 768px;
+
+        img {
             width: 768px;
+        }
+    }
 
-            img{
-                width: 768px;
-            }
-        }
-    
-        .agrupa-info {
-            display: flex;
-            flex-direction: row;
-            max-width: 100%;
-    
-        }
-    
-        .agrupa-info>div {
-            margin: 5px;
-        }
-    
-    
-        .infos {
-            display: flex;
-            flex-direction: row;
-            width: 150px;
-        }
-    
-        
-    
-            .grupo-image>img {
-                cursor: pointer;
-            }
-        }
+    .agrupa-info {
+        display: flex;
+        flex-direction: row;
+        max-width: 100%;
+
+    }
+
+    .agrupa-info>div {
+        margin: 5px;
+    }
+
+
+    .infos {
+        display: flex;
+        flex-direction: row;
+        width: 150px;
+    }
+
+
+
+    .grupo-image>img {
+        cursor: pointer;
+    }
+}
