--- a/src/rodape/index.scss
+++ b/src/rodape/index.scss
@@ -67,3 +67,12 @@
       margin-top: 160px !important;
     }
   }
+
+
+  @media  (max-width: 848px) {
+
+    .rodapee{
+      position: relative;
+      top: 40px;
+    }
+  }
