--- a/src/PedidosRealizados/index.scss
+++ b/src/PedidosRealizados/index.scss
@@ -25,7 +25,7 @@
         height: 13.3vh;
         display: flex;
         flex-direction: row;
-
+        flex-wrap: wrap;
         text-align: center;
         justify-content: center;
         
