--- a/src/cabecalho/index.scss
+++ b/src/cabecalho/index.scss
@@ -9,6 +9,14 @@
         text-decoration: none;
     }
 
+.dilado{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    gap: 10px;
+}
+
     .container {
 
         display: flex;
@@ -134,7 +142,8 @@
 
                     .sair-conta {
                         border: 1px solid white;
-                        padding: 10px;
+                        text-align: center;
+                        height: 25px;
                         border-radius: 5px;
                         cursor: pointer;
                     }
@@ -265,6 +274,7 @@
                         p {
                             color: white;
                             margin-bottom: 10px;
+                            margin-right: 5px;
                         }
 
                         .sair-conta {
