--- a/src/ABC---PAGES---ADM/cadastro-produto/index.scss
+++ b/src/ABC---PAGES---ADM/cadastro-produto/index.scss
@@ -74,6 +74,7 @@ background-color: rgb(56, 69, 255);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-size: cover;
     background-color: #d9d9d9;
     width: 100%;
     height: 100%;
@@ -223,12 +224,17 @@ background-color: rgb(56, 69, 255);
             display: flex;
             flex-direction: column;
          
+            .salvar-alterar {
+              display: flex;
+              flex-direction: column;
+            }
 
             .salvar {
               border: none;
               padding: 10px;
               background-color: #1A417C;
               width: 300px;
+              margin-bottom: 10px;
               color: white;
               margin-left: 180px;
               border-radius: 5px;
@@ -280,6 +286,7 @@ background-color: rgb(56, 69, 255);
     width: 106.9vh;
     height: 15vh;
     background-color: #164FA6;
+    background-size: cover;
 
 .usuario-p{
     display: flex;
