--- a/src/detalhe-produto-filtro/filtro-2/index.scss
+++ b/src/detalhe-produto-filtro/filtro-2/index.scss
@@ -5,7 +5,7 @@
   width:100%;
 
 .branco{
-  background-color: #EEEEEE;
+  background-color: none;
   display: flex;
   flex-direction: row;
   margin-top: 50px;
