--- a/src/meuspedidos/index.scss
+++ b/src/meuspedidos/index.scss
@@ -57,7 +57,7 @@
     flex-direction: row;
     align-items: center;
     .sub2 {
-
+        width: 600px;
       h3 {
         color: white;
         font-size: 32px;
