--- a/src/PedidosRealizados/index.scss
+++ b/src/PedidosRealizados/index.scss
@@ -1,12 +1,29 @@
 .principal{
     display: flex;
     flex-direction: column;
+  
 
+    .titulo{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .borda{
+        border: solid #000 2px;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        height: 80vh;
+        background-color: #000;
+        margin-top: 150px;
+        align-items: center;
+        justify-content: center;
+    }
 
     .corpo-pt1{
         display: flex;
         flex-direction: column;
-
         text-align: center;
         justify-content: center;
 
@@ -22,21 +39,20 @@
     
 
     .corpo-pt2{
-        height: 13.3vh;
+        height: 20vh;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         text-align: center;
         justify-content: center;
+        gap: 20px;
+        margin-bottom: 95.7px;
         
 
-        margin-bottom: 95.7px;
-
         img{
-            height: 10vh;
-            width: 5vw;
-            margin-right: 150px;
-
+            height: 80px;
+            width: 80px;
+            border-radius: 150px;
         }
     }
     
@@ -66,6 +82,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center;
 
         img{
             align-items: center;
