--- a/src/produtos/index.scss
+++ b/src/produtos/index.scss
@@ -29,6 +29,8 @@
             font-size: 50px;
             font-weight: 500;
             margin-bottom: 130px;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
         }
 
         nav{
