--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -3,16 +3,30 @@
 
 
 
+
+
+
     .antes{
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #000000;
         flex-direction: row;
         width: 80%;
 
     }
 
+    .enunciado{
+        height: 8vh;
+    }
+
+    .final-cruz{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: end;
+        height: 5vh;
+        width: 250px;
+    }
 
     .ahome{
         color: #000000;
@@ -351,6 +365,22 @@
 @media (max-width: 1396px) {
     .mae {
         max-width: 100%;
+
+
+        
+    .enunciado{
+        height: 15px;
+    }
+
+    .final-cruz{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: end;
+        height: 5vh;
+        width: 250px;
+    }
+
     }
 
 
